# duckdb-trino-parity-extension

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docker/: Dockerfile.linux-build  build-in-container.sh
scripts/: fetch-from-ci-artifacts.sh
src/: alias_macros.cpp.in  alias_macros_loader.cpp  hash_functions.cpp  macro_definitions.cpp  string_functions.cpp  trino_function_aliases.sql  trino_parity_extension.cpp
src/include/: hash_functions.hpp  macro_definitions.hpp  string_functions.hpp  trino_alias_sql.hpp  trino_parity_extension.hpp
test/sql/: trino_parity.test
